# u-boot

./: .azure-pipelines.yml  .b4-config  .checkpatch.conf  .clang-format  .config  .get_maintainer.conf  .get_maintainer.ignore  .gitattributes  .gitignore  .gitlab-ci-sage-lab.yml  .gitlab-ci.yml  .gitmodules  .mailmap  .readthedocs.yml  .travis.yml  CHANGELOG  CHANGELOG-before-U-Boot-1.1.5  COPYING  CREDITS  H743.jdebug  Kbuild  Kconfig  MAINTAINERS  MAKEALL  Makefile  README  README-porting  README.imx31  README.md  arm_config.mk  avr32_config.mk  blackfin_config.mk  boards.cfg  build-am335x.sh  build-am57xx.sh  build_uboot.sh  config.mk  cover.txt  csf.template  generated_defconfig  (+22 more)
Documentation/: efi.rst  (+1 more)
tools/binman/: README  README.entries  README.rst  android_vendor_dt_table.py  binman  binman.py  binman.rst  bintool.py  bintool_test.py  bintools.rst  bsection.py  cbfs_util.py  cbfs_util_test.py  cmdline.py  comp_util.py  control.py  elf.py  elf_test.py  entries.rst  entry.py  entry_test.py  fdt_test.py  fip_util.py  fip_util_test.py  fmap_util.py  ftest.py  func_test.py  image.py  image_test.py  index.rst  main.py  missing-blob-help  pyproject.toml  requirements.txt  setup.py  state.py
tools/binman/btool/: _testing.py  bootgen.py  btool_gzip.py  bzip2.py  cbfstool.py  cst.py  embed_capsule_key.py  fdt_add_pubkey.py  fdtgrep.py  fiptool.py  futility.py  ifwitool.py  lz4.py  lzma_alone.py  lzop.py  mkeficapsule.py  mkimage.py  openssl.py  p11_kit.py  pkcs11_tool.py  softhsm2_util.py  xz.py  zstd.py
tools/binman/etype/: _testing.py  alternates_fdt.py  android_boot.py  atf_bl1.py  atf_bl31.py  atf_fip.py  blob.py  blob_dtb.py  blob_ext.py  blob_ext_list.py  blob_named_by_arg.py  blob_phase.py  capsule.py  cbfs.py  collection.py  cros_ec_rw.py  dtbh.py  efi_capsule.py  efi_capsule_cfg_file.py  efi_empty_capsule.py  encrypted.py  entry.py  fdt_esl.py  fdt_esl_embed.py  fdtmap.py  file_size.py  files.py  fill.py  fit.py  fmap.py  gbb.py  image_header.py  int32.py  intel_cmc.py  intel_descriptor.py  intel_fit.py  intel_fit_ptr.py  intel_fsp.py  intel_fsp_m.py  intel_fsp_s.py  (+71 more)
tools/binman/test/: 009_pack_extra.dts  021_image_pad.dts  024_sorted.dts  028_pack_4gb_outside.dts  029_x86_rom.dts  053_symbols.dts  067_fmap.dts  085_files_compress.dts  089_extend_size_bad.dts  08_pack.dts  095_fmap_x86_section.dts  103_cbfs_raw_ppc.dts  105_cbfs_raw_compress.dts  106_cbfs_bad_arch.dts  107_cbfs_no_size.dts  108_cbfs_no_contents.dts  109_cbfs_bad_compress.dts  110_cbfs_name.dts  111_x86-rom-ifwi.dts  111_x86_rom_ifwi.dts  112_x86-rom-ifwi-nodesc.dts  112_x86_rom_ifwi_nodesc.dts  113_x86-rom-ifwi-nodata.dts  113_x86_rom_ifwi_nodata.dts  115_fdtmap.dts  116_fdtmap_hdr.dts  117_fdtmap_hdr_start.dts  119_fdtmap_hdr_missing.dts  120_hdr_no_location.dts  121_entry_expand.dts  122_entry_expand_twice.dts  123_entry_extend_section.dts  124_compress_dtb.dts  125_cbfs_update.dts  127_list.dts  129_decode_image_nohdr.dts  12_pack_inv_align.dts  130_list_fdtmap.dts  131_pack_align_section.dts  133_replace_multi.dts  (+295 more)
tools/binman/test/alt_dts/: model1.dts  model2.dts
tools/binman/test/blob/: ext.dts  ext_missing.dts  missing.dts
tools/binman/test/capsule/: accept_missing_guid.dts  capsule.dts  missing_guid.dts  missing_key.dts  oemflags.dts  signed_pkcs11.dts  signed_ver.dts  version.dts
tools/buildman/: README  README.rst  board.py  boards.py  bsettings.py  builder.py  builderthread.py  buildman.py  buildman.rst  cfgutil.py  cmdline.py  control.py  func_test.py  kconfiglib.py  main.py  pyproject.toml  requirements.txt  test.py  toolchain.py
tools/buildman/test/: Kconfig
tools/dtoc/: README.rst  dtb_platdata.py  dtoc.py  dtoc_test.dts  dtoc_test_addr32_64.dts  dtoc_test_addr64_32.dts  dtoc_test_aliases.dts  dtoc_test_phandle.dts  dtoc_test_phandle_cd_gpios.dts  dtoc_test_scan_drivers.cxx  dtoc_test_simple.dts  fdt.py  fdt_fallback.py  fdt_normal.py  fdt_select.py  fdt_util.py  main.py  pyproject.toml  setup.py  src_scan.py  test_dtoc.py  test_fdt.py  test_src_scan.py
tools/dtoc/test/: dtoc_test_add_prop.dts  dtoc_test_addr32.dts  dtoc_test_addr32_64.dts  dtoc_test_addr64.dts  dtoc_test_addr64_32.dts  dtoc_test_alias_bad.dts  dtoc_test_alias_bad_path.dts  dtoc_test_alias_bad_uc.dts  dtoc_test_aliases.dts  dtoc_test_copy.dts  dtoc_test_driver_alias.dts  dtoc_test_inst.dts  dtoc_test_invalid_driver.dts  dtoc_test_noparent.dts  dtoc_test_noprops.dts  dtoc_test_phandle.dts  dtoc_test_phandle_bad.dts  dtoc_test_phandle_bad2.dts  dtoc_test_phandle_cd_gpios.dts  dtoc_test_phandle_reorder.dts  dtoc_test_phandle_single.dts  dtoc_test_scan_drivers.cxx  dtoc_test_simple.dts  dtoc_test_single_reg.dts
tools/patman/: .checkpatch.conf  README  README.rst  __init__.py  __main__.py  checkpatch.py  cmdline.py  command.py  commit.py  control.py  cros_subprocess.py  cser_helper.py  cseries.py  database.py  func_test.py  get_maintainer.py  gitutil.py  main.py  patchstream.py  patchwork.py  patman.py  patman.rst  project.py  pyproject.toml  requirements.txt  send.py  series.py  settings.py  setup.py  status.py  terminal.py  test.py  test_checkpatch.py  test_common.py  test_cseries.py  test_settings.py  test_util.py  tools.py  tout.py
tools/patman/test/: 0000-cover-letter.patch  0001-pci-Correct-cast-for-sandbox.patch  0002-fdt-Correct-cast-for-sandbox-in-fdtdec_setup_mem_siz.patch  0002-fdt-Correct-cast-for-sandbox-in-fdtdec_setup_memory_.patch  test01.txt
tools/u_boot_pylib/: README.rst  __init__.py  __main__.py  command.py  cros_subprocess.py  gitutil.py  pyproject.toml  requirements.txt  terminal.py  test_util.py  tools.py  tout.py
(+38390 files in other folders)
