[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "binary-manager"
version = "0.0.2"
authors = [
  { name="Simon Glass", email="sjg@chromium.org" },
]
dependencies = ["pylibfdt", "u_boot_pylib", "dtoc"]
description = "Binman firmware-packaging tool"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://u-boot.readthedocs.io/en/latest/develop/package/index.html"
"Bug Tracker" = "https://source.denx.de/groups/u-boot/-/issues"

[project.scripts]
binman = "binman.main:start_binman"

[tool.setuptools.package-data]
patman = ["*.rst"]
