[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patch-manager"
version = "0.0.2"
authors = [
  { name="Simon Glass", email="sjg@chromium.org" },
]
dependencies = ["u_boot_pylib"]
description = "Patman patch manager"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://u-boot.readthedocs.io/en/latest/develop/patman.html"
"Bug Tracker" = "https://source.denx.de/groups/u-boot/-/issues"

[project.scripts]
patman = "patman.__main__"

[tool.setuptools.package-data]
patman = ["*.rst"]
