[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "u_boot_pylib"
version = "0.0.2"
authors = [
  { name="Simon Glass", email="sjg@chromium.org" },
]
description = "U-Boot python library"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://u-boot.readthedocs.io"
"Bug Tracker" = "https://source.denx.de/groups/u-boot/-/issues"

[tool.setuptools.packages.find]
where = [".."]
include = ["u_boot_pylib*"]
