[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "u_boot_pylib"
version = "0.0.6"
authors = [
  { name="Simon Glass", email="sjg@chromium.org" },
]
description = "U-Boot python library"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://docs.u-boot.org"
"Bug Tracker" = "https://source.denx.de/groups/u-boot/-/issues"

[tool.setuptools.package-data]
u_boot_pylib = ["*.rst"]
